--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,23 @@
 
-version=6.6.4
+#version=7.0.0-RC4
+version=6.5.9
+#version=6.6.6
 # CAS server version
-cas.version=6.6.4
+#cas.version=7.0.0-RC4
+cas.version=6.5.9
+#cas.version=6.6.6
 
-springBootVersion=2.7.3
+#springBootVersion=3.0.1
+springBootVersion=2.6.3
+#springBootVersion=2.7.3
 
 # The version of this overlay project
 group=org.apereo.cas
 artifactId=cas-overlay
-sourceCompatibility=11
-targetCompatibility=11
+sourceCompatibility=17
+targetCompatibility=17
 
-gradleFreeFairPluginVersion=6.6.1
+gradleFreeFairPluginVersion=6.6.2
 gradleDependencyManagementPluginVersion=1.1.0
 
 # Used to build docker images
@@ -21,7 +27,7 @@ jibVersion=3.3.1
 containerImageOrg=apereo
 containerImageName=cas
 
-baseDockerImage=eclipse-temurin:11-jdk
+baseDockerImage=eclipse-temurin:17-jdk
 allowInsecureRegistries=false
 dockerImagePlatform=amd64:linux
 
@@ -30,7 +36,7 @@ containerImage=apereo/cas
 # Include launch script for executable WAR artifact
 # Setting this to true allows the final web application
 # to be fully executable on its own
-executable=false
+executable=true
 
 # Use -tomcat, -jetty, -undertow for deployment to other embedded containers
 # if the overlay application supports or provides the chosen type.
@@ -51,7 +57,7 @@ shellDir=build/libs
 ivyVersion=2.5.0
 gradleDownloadTaskVersion=4.1.1
 
-tomcatVersion=9.0.70
+tomcatVersion=10.1.5
 
 # Include private repository
 # override these in user properties or pass in values from env on command line
